--- a/manifest.json
+++ b/manifest.json
@@ -10,25 +10,25 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "src/icons/icon-192x192.png",
+      "src": "src/icons/icon-192x192-any.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "src/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "src/icons/icon-192x192.png",
+      "src": "src/icons/icon-192x192-maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "src/icons/icon-512x512.png",
+      "src": "src/icons/icon-512x512-any.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "src/icons/icon-512x512-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
